fix alignment of the Bartender card on dashboard

--- a/src/AdminDashboard/components/BartendersDashboard/BartenderCardDashboard.module.css
+++ b/src/AdminDashboard/components/BartendersDashboard/BartenderCardDashboard.module.css
@@ -2,7 +2,7 @@
   width: 20rem;
   flex: 0 1 22%;
   background: #1b1b1b;
-  padding: 0 2rem 1rem 2rem;
+  padding: 0 1rem 1rem 1rem;
   width: 15rem;
   cursor: pointer;
   border-radius: 15px;
@@ -40,6 +40,10 @@
 
 .bartender_card_info {
   margin-top: 1rem;
+}
+
+.bartender_card_info h3 {
+  line-height: 1.3;
 }
 
 .bartender_card_name,
